@@ -1,7 +1,11 @@
 			CHANGELOG for KAME kit
-$KAME: CHANGELOG,v 1.2584 2004/04/06 10:43:32 jinmei Exp $
+$KAME: CHANGELOG,v 1.2585 2004/04/06 11:21:54 suz Exp $
 
 <200404>
+2004-04-06  SUZUKI, Shinsuke <suz@crl.hitachi.co.jp>
+	* kame/sys/netinet6/{ip6_output.c, ip6.h}
+	  FreeBSD Security Advisory: FreeBSD-SA-04:06.ipv6
+
 2004-04-04  SUZUKI, Shinsuke <suz@crl.hitachi.co.jp>
 	* kame/freebsd5: makes it compilable.
 
